# face-blur

./: .gitignore  CMakeLists.txt  README.md
src/: detector_model.cpp  detector_model.h  faceblur.cpp
